--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "rimraf": "^5.0.7",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.12.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
