--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 TOKEN="abc"
+DATABASE_USERNAME="pg"
+DATABASE_PASSWORD="pg"
+DATABASE_HOST="localhost"
+DATABASE_NAME="club"
+DATABASE_URL="postgresql://pg:pg@localhost:5432/club?schema=public"
