--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "grammy": "^1.24.1"
   }
 }
