--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ DATABASE_PASSWORD="pg"
 DATABASE_HOST="localhost"
 DATABASE_NAME="club"
 DATABASE_URL="postgresql://pg:pg@localhost:5432/club?schema=public"
+ADMINS="123,345"
