--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "dotenv": "^16.4.5",
-    "grammy": "^1.24.1"
+    "grammy": "^1.24.1",
+    "xlsx": "^0.18.5"
   }
 }
