--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "@prisma/client": "^5.15.1",
     "dotenv": "^16.4.5",
     "grammy": "^1.24.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   }
 }
